adsense, and css for contact form

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y64MTWHLWK"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y64MTWHLWK"></script>
   <script>
     window.dataLayer = window.dataLayer || []
     function gtag() { dataLayer.push(arguments) }
     gtag('js', new Date())
 
     gtag('config', 'G-Y64MTWHLWK');
-  </script> -->
+  </script>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/avataaar.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Online portfolio and blog of frontend web developer, Andrew J Hughes" />
   <title>Andrew J Hughes | Frontend Web Developer</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7566894593607519"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
