--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en-US" class="dark" dir="ltr">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y64MTWHLWK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() { dataLayer.push(arguments) }
+    gtag('js', new Date())
 
+    gtag('config', 'G-Y64MTWHLWK');
+  </script> -->
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/avataaar.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +21,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
