--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en-US" class="dark" dir="ltr">
 
 <head>
+  <meta charset="UTF-8" />
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y64MTWHLWK"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y64MTWHLWK"></script>
   <script>
     window.dataLayer = window.dataLayer || []
     function gtag() { dataLayer.push(arguments) }
     gtag('js', new Date())
 
     gtag('config', 'G-Y64MTWHLWK');
-  </script> -->
-  <meta charset="UTF-8" />
+  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7566894593607519"
+    crossorigin="anonymous"></script>
   <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/avataaar.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Online portfolio and blog of frontend web developer, Andrew J Hughes" />
@@ -21,7 +23,6 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
